--- a/Programmering Eksamensprojekt/Pages/Home.razor
+++ b/Programmering Eksamensprojekt/Pages/Home.razor
@@ -51,14 +51,12 @@
 <p>@pString</p>
 <p>@p1String</p>
 <p>@p2String</p>
-<p>@p3String</p>
+<p>@((MarkupString)p3String)</p>
 <p>@p4String</p>
 <p>@p5String</p>
 <p>@p6String</p>
 <p>@p7String</p>
-<div @key="@EquationsWithLineBreak">
-    @EquationsWithLineBreak
-</div>
+<div>@EquationsWithLineBreak</div>
 <p>@p9String</p>
 <p>@p10String</p>
 
@@ -264,6 +262,8 @@
         {
             Console.Error.WriteLine($"Unexpected error: {ex.Message}"); // Log unexpected errors
         }
+        if (mathJaxRenderer != null) { await mathJaxRenderer.RenderMath(); }
+
     }
 
     // Searches for equations that match the required units
