--- a/Programmering Eksamensprojekt/Pages/Home.razor
+++ b/Programmering Eksamensprojekt/Pages/Home.razor
@@ -51,12 +51,14 @@
 <p>@pString</p>
 <p>@p1String</p>
 <p>@p2String</p>
-<p>@((MarkupString)p3String)</p>
+<p>@p3String</p>
 <p>@p4String</p>
 <p>@p5String</p>
 <p>@p6String</p>
 <p>@p7String</p>
-<div>@EquationsWithLineBreak</div>
+<div @key="EquationsWithLineBreak">
+    @EquationsWithLineBreak
+</div>
 <p>@p9String</p>
 <p>@p10String</p>
 
