--- a/Programmering Eksamensprojekt/Pages/HelpPage.razor
+++ b/Programmering Eksamensprojekt/Pages/HelpPage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/Help page"
-<h3>Help page</h3>
+<h3>Informationsside</h3>
 <br>
 <h5>Denne guide vil hjælpe dig med at kunne bruge programmet så effektivt som muligt</h5>
 <br>
