whoopsie gjorde en oopsie

--- a/Programmering Eksamensprojekt/Pages/Home.razor
+++ b/Programmering Eksamensprojekt/Pages/Home.razor
@@ -8,6 +8,7 @@
 <PageTitle>Home</PageTitle>
 
 <!-- Include external JavaScript libraries -->
+<!-- Alex har opsat json formattet, mens Bertil har udfyldt størrelserne og formlerne -->
 <script type="text/javascript" async src="MathJax-master/MathJax-master/es5/tex-mml-chtml.js"></script>
 <script src="Rerender.js"></script>
 
