Making the search function actually work

--- a/Programmering Eksamensprojekt/Pages/HelpPage.razor
+++ b/Programmering Eksamensprojekt/Pages/HelpPage.razor
@@ -1,4 +1,4 @@
-﻿@page "/Help page"
+﻿@page "/Informationsside"
 <h3>Informationsside</h3>
 <br>
 <h5>Denne guide vil hjælpe dig med at kunne bruge programmet så effektivt som muligt</h5>
@@ -21,6 +21,7 @@
     <li>Programmet kan godt komme med flere løsninger, hvor du selv bliver nødt til at vurdere hvilken der passer i den korrekte situation, og hvilket ligninger der hører sammen. Dette er især tilfældet hvis det skal bruges mange ligninger, til at nå til svaret</li>
     <li>Alt der har noget med en længde at gøre (sted, position, radius osv.) hedder alle "længde"</li>
     <li>Der findes forskellige slags energier og kræfter, så det er vigtigt at bruge den mest relevante. Prøv evt. bare "Kraft"/"Energi" hvis det specifikke du bruger ikke virker</li>
+    <li>Der er aldrig nødvendig at indtaste den samme størrelse mere end en gang i alt, der skal altså ikke indtastes temperatur både i begge felter, selvom du har en temperatur og vil finde en anden</li>
 </ul>
 
 
