--- a/Programmering Eksamensprojekt/Layout/NavMenu.razor
+++ b/Programmering Eksamensprojekt/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Programmering Eksamensprojekt</a>
+        <a class="navbar-brand" href="">Formel Finder</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -11,14 +11,14 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" @onclick="NavigateToHome" Match=" NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
+                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Søgeside
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Help page">
+            <NavLink class="nav-link" href="Informationsside">
                 <svg width="24" height="24" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <text x="50%" y="55%" dominant-baseline="middle" text-anchor="middle" font-size="18" font-weight="bold" font-family="Arial" fill="currentColor">?&#160</text>
-                </svg> &#160;&#160;Help page
+                </svg> &#160;&#160;Informationsside
             </NavLink>
         </div>
     </nav>
