--- a/Programmering Eksamensprojekt/Layout/NavMenu.razor
+++ b/Programmering Eksamensprojekt/Layout/NavMenu.razor
@@ -36,7 +36,7 @@
         collapseNavMenu = !collapseNavMenu;
     }
     
-    //Forces the program to reload when going back to the main page to avoid crashin
+    //Forces the program to reload when going back to the main page to avoid crashing
     private void NavigateToHome()
     {
         NavManager.NavigateTo("/", forceLoad: true);
