--- a/Programmering Eksamensprojekt/Pages/HelpPage.razor
+++ b/Programmering Eksamensprojekt/Pages/HelpPage.razor
@@ -18,10 +18,12 @@
     <li>Programmet kan ikke forstå ligninger, så det er vigtigt at være kritisk, da nogle ligninger kun gælder i specifikke tilfælde (dette er skrevet foran ligningen)</li>
     <li>Programmet kan ikke manipulere ligninger, og du skal derfor selv isolere</li>
     <li>Programmet kan dermed heller ikke sammensætte ligninger, og se om størrelse går ud med hinanden, så det kan være en fordel at give den en ekstra information</li>
-    <li>Programmet kan godt komme med flere løsninger, hvor du selv bliver nødt til at vurdere hvilken der passer i den korrekte situation, og hvilket ligninger der hører sammen. Dette er især tilfældet hvis det skal bruges mange ligninger, til at nå til svaret</li>
+    <li>Programmet kan godt komme med flere løsninger, hvor du selv bliver nødt til at vurdere hvilken der passer i den korrekte situation, og hvilket ligninger der hører sammen. 
+        Dette er især tilfældet hvis det skal bruges mange ligninger, til at nå til svaret</li>
     <li>Alt der har noget med en længde at gøre (sted, position, radius osv.) hedder alle "længde"</li>
     <li>Der findes forskellige slags energier og kræfter, så det er vigtigt at bruge den mest relevante. Prøv evt. bare "Kraft"/"Energi" hvis det specifikke du bruger ikke virker</li>
-    <li>Der er aldrig nødvendig at indtaste den samme størrelse mere end en gang i alt, der skal altså ikke indtastes temperatur både i begge felter, selvom du har en temperatur og vil finde en anden</li>
+    <li>Der er aldrig nødvendig at indtaste den samme størrelse mere end en gang i alt, der skal altså ikke indtastes temperatur både i begge felter,
+        selvom du har en temperatur og vil finde en anden</li>
 </ul>
 
 
